--- a/.gitignore
+++ b/.gitignore
@@ -106,12 +106,15 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
+.venv*
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Environment files
+*.env
 
 # Spyder project settings
 .spyderproject
@@ -139,3 +142,4 @@ cython_debug/
 
 # idea
 .idea
+
